# Parallel-Huffman-Coding

./: README.md
code/: CMakeLists.txt  buildProject.sh  main.cpp
code/data/inputs/: test1.txt  toy-test.txt
code/data/outputs/: README.md
code/data/statistics/: README.md
code/include/: huff_node.hpp  huffman.hpp  par_fastflow.hpp  par_thread.hpp  sequential.hpp  utils.hpp  utimer.hpp
code/src/: huff_node.cpp  par_fastflow.cpp  par_thread.cpp  sequential.cpp  utils.cpp
code/test/: timingTests.sh
evaluation/: Huffman.xlsb.xlsx
